@@ -1,5 +1,5 @@
 AUX postinstall-en.txt 271 RMD160 add1e5127a92ce1bea1c867a6bab4d49467b2b5f SHA1 1966f3c2f815276a5d25e90f5841b152c8131419 SHA256 674d1bb821b4dc9b64880e12b0e8ca62f439128d92c936e4337782be6b5d9878
-DIST SugarCE-5.5.0RC4.zip 15763431 RMD160 b9348863386d67c40c5ac4d72ffea668bc8fba7f SHA1 520d953ea12dd6b57fa013a9c839eab6a6840c6b SHA256 801f3933b185a6046ee5e86eb702e738ef04268fc52b28838cc4f4223d11c0b9
-EBUILD sugarcrm-5.5.0_rc4.ebuild 1636 RMD160 f6db22fd94e6bf7b3cbd7506a85fe7d5d786d663 SHA1 150986d3def3b26727f8940aa18c8a73f51ae096 SHA256 cc2d2f90235faf9d5fb4b92306fc4f036c407b0937b1b3be682efaae4f6ebf75
-MISC ChangeLog 1695 RMD160 2e70c01dca43ad8f48c32843798bed738063643a SHA1 c18b7bc01253138bdbc896c9141e00246c073d08 SHA256 25ce58b2007634ed58c99ab08ed8b67a4717888cfed35b3321152d5f498e0562
+DIST SugarCE-5.5.0.zip 15725059 RMD160 f15669e860cbbe545372dad28a4be126c6c0dbb9 SHA1 80d5bf32e4b4b4f4682b278f66be4cc378754c47 SHA256 d9518b85d065cfa80efcfcb63afa930d06903be8f893d11d46d6176a6a1420d6
+EBUILD sugarcrm-5.5.0.ebuild 1656 RMD160 03239a7ac74188ec01e5e3148e44bef4ab7efa6e SHA1 52f3ff43ea42c398540630c721804e107637c100 SHA256 5a7a7205a512580666e20f9a7fe6cb16cd78e26b772cf9cfba767e8a53f66154
+MISC ChangeLog 1817 RMD160 d934bf212c4631990c9f4593af2c551f4614c278 SHA1 310c241f1805d4e61578efcbfc764ac5021aef53 SHA256 c723a7b6dbae84d4e80fbcc51ece08ac04b6a343ad3e9e414d627d8a816182b1
 MISC metadata.xml 284 RMD160 1019fd51daed9c34a494761014d60eb606421a0b SHA1 12c23784f913732db6c55b500655b99e7282d009 SHA256 bd0ec6d455161a96149013a599770f7d2827bbdc94357f538f0050b1e6b8cdc6
