@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  -sugarcrm-5.5.0_rc4.ebuild, +sugarcrm-5.5.0.ebuild:
+  new release
+
   17 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   sugarcrm-5.5.0_rc4.ebuild:
   add include dit to serverowned
